# Fintech_Capstone

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.cfg
backend/: Dockerfile  MIGRATION_TROUBLESHOOT.md  celery_logger.py  environment.yml  make_celery.py  pytest.ini  requirements.txt  test_initial.sql
backend/.jupyter/: jupyter_lab_config.py
backend/app/: __init__.py  config.py  env.py  extensions.py
backend/app/cli/: __init__.py  cron.py  demo.py
backend/app/constants/: __init__.py  investor_prompts.py  survey.py  user.py
backend/app/models/: __init__.py  base.py  crypto.py  demo_user.py  mixins.py  user.py  watchlist.py  youtube.py
backend/app/routes/: __init__.py  crypto_information.py  demo_user.py  health.py  user.py  watchlist.py
backend/app/schemas/: crypto_schema.py  demo_user.py  survey_schema.py  tier_schema.py  user_schema.py  youtube_schema.py
backend/app/utils/: __init__.py  decorators.py  filters.py
backend/migrations/versions/: 07843b52a619_youtubecommentanalysis_add_index.py  187a16d54d5a_create_user_model.py  2feb84060e15_create_sentiment_aggregate_model.py  33a513f0345e_create_news_model.py  3516818e9cb0_updates_user_pass_hash_length.py  38a4a1dc8963_modify_primary_constraint_for_reddit_model.py  4470b2a3014b_create_crypto_asset_crypto_source_and_.py  (+11 more)
backend/notebooks/: binance_ingest.ipynb
backend/tests/: conftest.py
frontend/: .gitignore  Dockerfile  README.md  eslint.config.js  jest.config.cjs  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  config.js  main.jsx
(+149 files in other folders)
