[options]
python_requires = >=3.10

[flake8]
# B: more rules on top of flake8 https://github.com/PyCQA/flake8-bugbear
# B902: check `self` for instance methods and `cls` for class methods
# B905: a more pragmatic check on max line length with buffer
select = C,E,F,W,B,B902,B950

# W503: line break occurred before a binary operator
#   reason: Black adds line break before a binary operator, which is preferred
# E203: whitespace before `:`
#   reason: Black adds whitespace around slice operators in some cases
# E501: line too long
#   reason: replaced by B905
ignore = W503,E203,E501

# B950: line too long
# E722: bare exceptions
# F401: skip checking unused import in all __init__.py
# F403: allow using `from ... import *` in all __init__.py and setting files
# F405: allow using variables from star imports
#   e.g. `from .default import *` and then `MIDDLEWARE += ...`
# F841: unused variables
per-file-ignores =
    __init__.py: F401,F403
    */tests/*: B950,E722,F401,F841
